[gd_scene load_steps=12 format=2]

[ext_resource path="res://language/TRANSLATE.tscn" type="PackedScene" id=1]
[ext_resource path="res://game-parts/made-by/MadeByScaler.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://custom-ui/scaler.gd" type="Script" id=4]
[ext_resource path="res://menus/end/end_game_lost.gd" type="Script" id=5]
[ext_resource path="res://language/LanguageScaler.tscn" type="PackedScene" id=6]
[ext_resource path="res://language/REFRESH_TRANSLATION.tscn" type="PackedScene" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.333333, 0.715847 )
colors = PoolColorArray( 0.109804, 0.215686, 0.0156863, 1, 0.377738, 0.399817, 0.0640796, 1, 0.631373, 0.572549, 0.109804, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 512

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/BTN2.png-bbbd787c40f8d99f454fffff668f5a6e.stex"

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/BTN3.png-6a7610b9a8a2b46a6799cef804949f21.stex"

[node name="Lost" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuScaler" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnvironmentHard" type="Control" parent="MenuScaler"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouLost" type="Label" parent="MenuScaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -234.0
margin_right = 320.0
margin_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "YOU LOST!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TRANSLATE" parent="MenuScaler/YouLost" instance=ExtResource( 1 )]
term_key = "you_lost"

[node name="Difficulty" type="Label" parent="MenuScaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = 78.0
margin_right = 3306.67
margin_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.45, 0.45 )
custom_colors/font_color = Color( 1, 0.164706, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = " Difficulty:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TRANSLATE" parent="MenuScaler/Difficulty" instance=ExtResource( 1 )]
term_key = "difficulty"

[node name="Mode" type="Label" parent="MenuScaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = 129.0
margin_right = 3306.67
margin_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.45, 0.45 )
custom_colors/font_color = Color( 1, 0.164706, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Hard"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="REFRESH_TRANSLATION" parent="MenuScaler/Mode" instance=ExtResource( 7 )]

[node name="YouWonLabel" type="Label" parent="MenuScaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = 198.0
margin_right = 5440.0
margin_bottom = 721.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.3, 0.3 )
custom_constants/line_spacing = 25
custom_fonts/font = ExtResource( 3 )
text = "Can you really do it on medium? The frame time
scale gets sped up by 20% or something"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="REFRESH_TRANSLATION" parent="MenuScaler/YouWonLabel" instance=ExtResource( 7 )]

[node name="GoBack" type="TextureButton" parent="MenuScaler"]
margin_left = -184.0
margin_top = 373.0
margin_right = 855.0
margin_bottom = 598.0
rect_scale = Vector2( 0.35, 0.35 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
texture_normal = SubResource( 5 )
texture_hover = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuScaler/GoBack"]
margin_right = 990.0
margin_bottom = 215.0
rect_scale = Vector2( 1.05, 1.05 )
custom_fonts/font = ExtResource( 3 )
text = "Retry"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="REFRESH_TRANSLATION" parent="MenuScaler/GoBack/Label" instance=ExtResource( 7 )]

[node name="OrPressSpace3" type="Label" parent="MenuScaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 459.0
margin_right = 2243.0
margin_bottom = 544.0
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = ExtResource( 3 )
text = "(press SPACE or ENTER)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TRANSLATE" parent="MenuScaler/OrPressSpace3" instance=ExtResource( 1 )]
term_key = "press_space"

[node name="MadeByScaler" parent="." instance=ExtResource( 2 )]
visible = false

[node name="LanguageScaler" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="MenuScaler/GoBack" to="." method="_on_lost_ok_click"]
